--- a/experiments/siamrpn_r50_kerneldwconv2d/config.yaml
+++ b/experiments/siamrpn_r50_kerneldwconv2d/config.yaml
@@ -1,25 +1,24 @@
-META_ARC: "siamrpn_eB5_dwxcorr_train"
+#Baseline
+META_ARC: "siamrpn_r50_kerneldwconv2d"
 
 BACKBONE:
-    TYPE: "efficientnet-b4"
+    TYPE: "resnet50"
     KWARGS:
-          used_layers: []
-    PRETRAINED: '../pretrained_models/efficientnet-b4-6ed6700e.pth'
-    TRAIN_LAYERS: ['_blocks', '_conv_head', '_bn1', '_swish']
+        used_layers: [3]
+    PRETRAINED: 'pretrained_models/resnet50.model'
+    TRAIN_LAYERS: ['layer2', 'layer3']
     TRAIN_EPOCH: 10
     LAYERS_LR: 0.1
-
-#used_layers: [26, 35, 38]
 
 ADJUST:
     ADJUST: true
     TYPE: "AdjustAllLayer"
     KWARGS:
-        in_channels: [1792]
+        in_channels: [1024]
         out_channels: [256]
 
 RPN:
-    TYPE: 'DepthwiseRPN'
+    TYPE: 'KernelDWConv2dRPN'
     KWARGS:
         anchor_num: 5
         in_channels: 256
@@ -45,9 +44,9 @@ TRACK:
     CONTEXT_AMOUNT: 0.5
 
 TRAIN:
-    EPOCH: 50
+    EPOCH: 20
     START_EPOCH: 0
-    BATCH_SIZE: 4
+    BATCH_SIZE: 24
     BASE_LR: 0.005
     CLS_WEIGHT: 1.0
     LOC_WEIGHT: 1.2
